--- a/index.html
+++ b/index.html
@@ -3,232 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900|Titillium+Web:400,600,700,900&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Titillium+Web&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
-    <title>Shopx</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,400i,600,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <title>BluePink</title>
 </head>
 <body>
-    <header class="header-wrapper">
-        <section class="header-sup content-width">
-            <section class="header-sup-wrap">
-                <div class="header-sup-item">
-                    <!--Standart input wrap-->
-                    <div class="input-wrap">
-                        <img src="/assets/icon/search.png" alt="" class="zoom-icon">
-                        <input type="text" placeholder="SEARCH" class="input-block">
-                    </div>
-                    <!--/Standart input wrap-->
-                </div>
-                <a href="index.html" class="header-sup-item">
-                    <img src="/assets/img/logo.png" alt="" class="logo">
-                </a>
-                <div class="header-sup-item">
-                    <img src="/assets/icon/user.png" alt="" class="logfile-icon">
-                    <img src="/assets/icon/cart.png" alt="" class="logfile-icon">
-                </div>
-            </section>
+    <header style="margin-bottom: 20px;">
+        <section class="text-logo">
+            Blue
+            <span class="text-style-1">
+                Pink
+            </span>
+            <span class="text-style-2">
+                .com
+            </span>
         </section>
-        <div class="separate-underline"></div>
-        <section class="header-sub content-width">
-            <nav class="nav-wrap">
-                <ul class="nav-bar">
-                    <li class="nav-item"><a href="#">Home</a></li>
-                    <li class="nav-item"><a href="#">Shop</a></li>
-                    <li class="nav-item"><a href="#">Element</a></li>
-                    <li class="nav-item"><a href="#">Pages</a></li>
-                    <li class="nav-item"><a href="#">portfolio</a></li>
-                    <li class="nav-item"><a href="#">blogs</a></li>
-                </ul>
-            </nav>
-        </section>
+        <ul class="head-nav">
+            <li>Home</li>
+            <li>About</li>
+            <li>Blogs</li>
+            <li>Work</li>
+            <li>News</li>
+            <li>Contacts</li>
+        </ul>
     </header>
-    <section class="slider">
-        <section class="slider-wrap content-width">
-            <img src="/assets/img/slider-img.png" alt="" class="slider-img">
-            <div class="slider-control">
-                <div class="slider-tap"></div>
-                <div class="slider-tap"></div>
-                <div class="slider-tap"></div>
-                <div class="slider-tap"></div>
-                <div class="slider-tap"></div>
-            </div>
-        </section>
-    </section>
-    <!--Product shop container-->
-    <section class="shop-wrapper">
-        <section class="content-wrap content-width">
-            <section class="shop-nav">
-                <ul class="nav-filter">
-                    <li class="filter-item"><img src="/assets/icon/Nav.png" alt=""></li>
-                    <li class="filter-item">all</li>
-                    <li class="filter-item">home</li>
-                    <li class="filter-item">learning</li>
-                    <li class="filter-item">office</li>
-                    <li class="filter-item">outdoor</li>
+    <main>
+        <section class="content-column">
+            <section class="content-row">
+                <ul class="main-nav">
+                    <li>Natus error sit voluptatem</li>
+                    <li>Et veritatis quasi</li>
+                    <li>Vitae dicta sunt explicabo</li>
+                    <li>Nectun sed quia conseq</li>
+                    <li>Nectun sed quia conseq</li>
+                    <li>Et veritatis quasi</li>
+                    <li>Natus error sit voluptatem</li>
+                    <li>Sed ut perspiciatis</li>
+                    <li>Nemo enim ipsam</li>
+                    <li>Totam rem aperiam</li>
                 </ul>
-                <div class="input-wrap">
-                    <img src="/assets/icon/search.png" alt="" class="zoom-icon">
-                    <input type="text" placeholder="SEARCH" class="input-block">
-                </div>
             </section>
-            <section class="item-wrapper">
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (1).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Lava Vtase</h5>
-                            <h5 class="product-price">$35.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (2).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Ceramic Pote</h5>
-                            <h5 class="product-price">$255.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (3).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Loretro Vinianche</h5>
-                            <h5 class="product-price">$445.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (4).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Lava Vtase</h5>
-                            <h5 class="product-price">$35.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (5).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Lava Vtase</h5>
-                            <h5 class="product-price">$35.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
-                <!--Item product-->
-                <section class="item">
-                    <div class="product-img-wrap">
-                        <div class="icon-column">
-                            <img src="/assets/icon/Nav.png" alt="" class="product-icon">
-                            <img src="/assets/icon/Forma 1.png" alt="" class="product-icon">
-                            <img src="/assets/icon/compare.png" alt="" class="product-icon">
-                        </div>
-                        <div class="img-column">
-                            <img src="/assets/img/product/1 (6).jpg" alt="">
-                        </div>
-                    </div>
-                    <section class="product-description">
-                        <div class="product-info">
-                            <h5 class="product-name">Lava Vtase</h5>
-                            <h5 class="product-price">$35.00</h5>
-                        </div>
-                        <div class="product-info-underline"></div>
-                        <div class="product-buy">
-                            <img src="assets/icon/cart.png" alt="" class="icon-buy">
-                            <button class="card-text">add to cart</button>
-                        </div>
-                    </section>
-                </section>
-                <!--/Item product-->
+            <section class="content-row">
+                <h2>Left Block</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                    architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                    voluptatem sequi nesciunt.</p>
+                <a href="index.html">Read more...</a>
             </section>
         </section>
-    </section>
-    <!--/Product shop container-->
-    <section>
-
-    </section>
+        <section class="content-column">
+            <section class="container-title">
+                <h1 class="title">Lorem ipsum dolor sit amet, consectetur</h1>
+                <p class="title-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </section>
+            <section class="container-gallery">
+                <h2></h2>
+            </section>
+            <section class="container-list">
+                <h2></h2>
+            </section>
+            <section class="container-table">
+                <h2></h2>
+            </section>
+            <section class="container-forms">
+                <h2></h2>
+            </section>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
