Create all main container: heading, list, table and form container

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </ul>
             </section>
             <section class="content-row">
-                <h2>Left Block</h2>
+                <h2 class="subtitles">Left Block</h2>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                     laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
                     architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
@@ -64,16 +64,91 @@
                     cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
             <section class="container-gallery">
-                <h2></h2>
+                <h2>Images</h2>
+                <div class="gallery-wrap">
+                    <div class="img"></div>
+                    <div class="img"></div>
+                    <div class="img"></div>
+                </div>
             </section>
             <section class="container-list">
-                <h2></h2>
+                <h2>Lists and Descriptions</h2>
+                <section class="list-wrap">
+                    <ul class="list-column">
+                        <h4 class="list-heading">Unordered list</h4>
+                        <li>Sed ut perspiciatis unde omnis iste</li>
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>At vero eos et accusamus et iusto</li>
+                        <li>Et harum quidem rerum facilis</li>
+                    </ul>
+                    <ol class="list-num">
+                        <h4 class="list-heading">Ordered list</h4>
+                        <li>Sed ut perspiciatis unde omnis iste</li>
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>At vero eos et accusamus et iusto</li>
+                        <li>Et harum quidem rerum facilis</li>
+                    </ol>
+                    <ul class="list-column">
+                        <h4 class="list-heading">Descriptions</h4>
+                        <li>Sed ut perspiciatis unde omnis iste</li>
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>At vero eos et accusamus et iusto</li>
+                        <li>Et harum quidem rerum facilis</li>
+                    </ul>
+                </section>
             </section>
             <section class="container-table">
-                <h2></h2>
+                <h2>Table</h2>
+                <table class="table-contaier">
+                    <tr>
+                        <th>Lorem</th>
+                        <th>Ipsum alamet</th>
+                        <th>Set soti un alame</th>
+                    </tr>
+                    <tr>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                    </tr>
+                    <tr>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                    </tr>
+                    <tr>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                        <td>At vero eos et</td>
+                    </tr>
+                </table>
             </section>
             <section class="container-forms">
-                <h2></h2>
+                <h2>Forms</h2>
+                <div class="input-wrap">
+                    <h5>Text</h5>
+                    <input type="text" placeholder="input type text" class="input-container">
+                </div>
+                <div class="input-wrap">
+                    <h5>Select</h5>
+                    <select name="" id="" class="input-container">
+                        <option value="">Lorem bobrorum</option>
+                        <option value="">Lorem bobrorum</option>
+                        <option value="">Lorem bobrorum</option>
+                    </select>
+                </div>
+                <label class="check-wrap">
+                    <input type="checkbox" name="" id="">
+                    <p>Sed ut perspiciatis unde omnis iste natus</p>
+                </label>
+                <label class="check-wrap">
+                    <input type="radio" name="" id="">
+                    <p>Sed ut perspiciatis unde omnis iste natus</p>
+                </label>
+                <section class="text-area">
+                    <h4>Text area:</h4>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </section>
+                <button class="form-btn">Button</button>
             </section>
         </section>
     </main>
