--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-wrap">
+            <p>© Footer content Link footer</p>
+        </section>
+    </footer>
 </body>
 </html>
