Full readiness of all blocks, as well as ready-made media styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>News</li>
             <li>Contacts</li>
         </ul>
+        <img src="../assets/menu.svg" alt="btn menu" class="btn-menu">
     </header>
     <main>
         <section class="content-column">
